<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:gravity="center">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/roll_number"
        android:id="@+id/roll"
        android:inputType="text"
        android:autofillHints="">
    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:id="@+id/name"
        android:inputType="text"
        android:autofillHints="">
    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:id="@+id/phone"
        android:inputType="phone"
        android:autofillHints="">
    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:autofillHints="">
    </EditText>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/pass"
        android:inputType="textPassword"
        android:autofillHints="">
    </EditText>
    <Spinner
        android:id="@+id/sp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Gender"
        android:prompt="@string/choose"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp">
    </Spinner>
    <Spinner
        android:id="@+id/sp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Branch"
        android:prompt="@string/choose"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp">
    </Spinner>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:textColor="#ffffff">
    </Button>
</LinearLayout>